# alet-cybercamp

./: ApplicationLogs.csv.csv  Dockerfile.streamlit  README.md  app.py  config.toml  docker-compose.yml  hello.py  pyproject.toml
data/: ApplicationLogs.csv  DSLogs.csv  SystemLogs.csv
