[project]
name = "alet-cybercamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index>=0.12.39",
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-llms-ollama>=0.6.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
]
